--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -24,8 +24,8 @@ body {
 
 /* Custom page header */
 .header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
+  /*border-bottom: 1px solid #e5e5e5;
+  margin-bottom: 10px;*/
 
   /* Make the masthead heading the same height as the navigation */
   h3 {
@@ -37,11 +37,11 @@ body {
 }
 
 /* Custom page footer */
-.footer {
+/*.footer {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
-}
+}*/
 
 .container-narrow > hr {
   margin: 30px 0;
@@ -79,10 +79,6 @@ body {
   .footer {
     padding-left: 0;
     padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
