reduced image size. added results page. created data access service to share between experiment and results.

--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,1 +1,1 @@
-<p>This is the contact view.</p>
+<p class="text-center"><span class="glyphicon glyphicon-user"></span> Find me on <a href="{{ address.github }}">GitHub</a>.</p>
