directive for chart. factory for data access

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,7 +10,7 @@
     <div class="col-xs-3">
       <button ng-click="incrementLeft()" 
         type="button" class="btn btn-primary btn-lg btn-block">
-        <span class="glyphicon glyphicon-hand-left"></span> <span class="badge">{{ data().left.length }}</span>
+        <span class="badge">{{ data().left.length }}</span> <span class="glyphicon glyphicon-hand-left"></span>
       </button>
     </div>
 
@@ -31,7 +31,7 @@
     <div class="col-xs-3">
       <button ng-click="incrementRight()" 
         type="button" class="btn btn-info btn-lg btn-block">
-        <span class="badge">{{ data().right.length }}</span> <span class="glyphicon glyphicon-hand-right">
+        <span class="glyphicon glyphicon-hand-right"></span> <span class="badge">{{ data().right.length }}</span>
       </button>
     </div>
   </div>
