--- a/app/views/results.html
+++ b/app/views/results.html
@@ -1,1 +1,21 @@
-<div id="chart"><div>
+<div  class="row">
+  <div class="col-xs-12">
+    <obs-chart chart-data="dataset"></obs-chart>
+  </div>
+</div>
+
+<!--<hr>
+
+<div class="row">
+  <div class="col-xs-6">
+    <div id="histDurationLeftChart"><div>
+    <p class="text-center">Minimum observed duration: {{ minDuration.left }} minutes.</p>
+    <p class="text-center">Maximum observed duration: {{ maxDuration.left }} minutes.</p>
+  </div>
+  <div class="col-xs-6">
+    <div id="histDurationRightChart"><div>
+    <p class="text-center">Minimum observed duration: {{ minDuration.right }} minutes.</p>
+    <p class="text-center">Maximum observed duration: {{ maxDuration.right }} minutes.</p>
+  </div>
+</div>
+-->
